--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   pdf: ^3.11.1
   path_provider: ^2.1.4
   flutter_dotenv: ^5.2.1
+  sqflite: ^2.4.0
+  path: ^1.9.0
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
